# DevPilot

./: .env.example  .gitignore  COMPONENTS_MANIFEST.json  COMPONENTS_MANIFEST.txt  COMPONENTS_MANIFEST_FUNC_SPRINT_87.txt  DELETE_MANIFEST.md  Errores pytest.txt  Log_consola_error_pytest.txt  Log_consola_sprint_024.txt  Log_consola_sprint_026.txt  Log_consola_sprint_04.txt  Log_consola_sprint_15.txt  Log_consola_sprint_16.txt  Log_consola_sprint_17.txt  Log_consola_sprint_18.txt  Log_consola_sprint_22.txt  Log_consola_sprint_23.txt  Log_consola_sprint_25.txt  Log_consola_sprint_28.txt  Log_consola_sprint_41.txt  Log_consola_validacion_especifica_sprint_34.txt  Log_consola_validacion_especifica_sprint_36.txt  Log_consola_validacion_especifica_sprint_37.txt  Log_consola_validacion_especifica_sprint_38.txt  Log_consola_validacion_especifica_sprint_39.txt  Log_consola_validacion_especifica_sprint_40.txt  Log_consola_validacion_especifica_sprint_42.txt  Log_consola_validacion_especifica_sprint_43.txt  Log_consola_validacion_especifica_sprint_44.txt  Log_consola_validacion_especifica_sprint_55.txt  Log_consola_validacion_especifica_sprint_65.txt  Log_consola_validacion_especifica_sprint_68.txt  Log_consola_validacion_especifica_sprint_69.txt  Log_consola_validacion_especifica_sprint_7.txt  Log_consola_validacion_especifica_sprint_70.txt  Log_consola_validacion_especifica_sprint_71.txt  Log_consola_validacion_especifica_sprint_75.txt  Log_consola_validacion_especifica_sprint_77.txt  Log_consola_validacion_especifica_sprint_78.txt  Log_consola_validacion_especifica_sprint_83.txt  (+95 more)
(+2416 files in other folders)
