[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devpilot-local"
version = "0.1.0"
description = "Local-first agent-assisted SDLC personal platform"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.22,<5"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
