[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devpilot-local"
version = "0.1.0"
description = "Local-first agent-assisted SDLC personal platform"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.22,<5"]

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn>=0.30,<1", "httpx>=0.27,<1"]
dev = ["pytest>=8.0", "fastapi>=0.115,<1", "uvicorn>=0.30,<1", "httpx>=0.27,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
